--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-bootstrap": "^2.2.1",
     "react-bootstrap-icons": "^1.7.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.4.0",
     "react-input-mask": "^2.0.4",
     "react-redux": "^7.2.6",
     "react-router": "^6.2.2",
